# docz

./: Cargo.toml  README.md  docz.code-workspace  test.txt
.cargo/: config.toml
demo/: doc.toml
demo/src/: 00-intro.md
doc/: doc.toml
doc/src/: 01-chapter_1.md  02-chapter_2.md
doc/src/02-chapter_2/: 01-section_1.md
doc/tpl/: index.hbs  page.hbs  style.css
docz-ast/: Cargo.toml
docz-ast-epub/: Cargo.toml  test.epub
docz-ast-epub/src/: error.rs  lib.rs  rend.rs  tests.rs
docz-ast-html/: Cargo.toml
docz-ast-html/src/: ast.rs  error.rs  lib.rs  pars.rs  parse.rs  rend.rs  render.rs  tests.rs
docz-ast-html/src/tests/: sample-bk.html  sample.html
docz-ast-md/: Cargo.toml
docz-ast-md/src/: ast.rs  error.rs  fmatter.rs  lib.rs  pars.rs  parse.rs  rend.rs  render.rs  tests.rs
docz-ast-md/src/tests/: sample.md
docz-ast-pdf/: Cargo.toml
docz-ast-pdf/examples/: hello.ipynb
docz-ast-pdf/src/: ast.rs  error.rs  fonts.rs  lib.rs  rend.rs  render.rs  tests.rs
docz-ast-tex/: Cargo.toml
docz-ast-tex/examples/: hello.tex  tex.rs
docz-ast/src/: conv.rs  error.rs  json.rs  lib.rs  tests.rs  traits.rs
docz-cli/: Cargo.toml
docz-cli/src/: args.rs  cmd.rs  main.rs
docz-demo/: doc.toml
docz-lib/: Cargo.toml
docz-lib/examples/: serve.rs
docz-lib/src/: ast.rs  build.rs  cfg.rs  conv.rs  doc.rs  fmt.rs  lib.rs  proc.rs  rend.rs  serve.rs  src.rs  srv.rs  watch.rs
docz-lib/src/fmt/: epub.rs  html.rs  mkd.rs
docz-lib/src/rend/: dbg.rs  epub.rs  html.rs
docz-lib/src/rend/epub/: template.rs
docz-lib/src/rend/epub/template/: chapter.hbs  cover.hbs  style.css
docz-lib/src/rend/html/: index.hbs  templates.rs
docz-lib/src/rend/html/templates/_partials/: page_partial.hbs  toc_partial.hbs
docz-lib/src/rend/html/templates/_shared/: sidebar.js  sse.js  theme.js
docz-lib/src/rend/html/templates/article/: index.hbs  page.hbs  style.css
docz-lib/src/rend/html/templates/default/: index.hbs  page.hbs  style.css
docz-lib/src/rend/html/tpl/default/: index.hbs  page.hbs  page_partial.hbs
docz-lib/src/rend/templates/: html.hbs
docz-lib/tests/: build.rs
docz-lib/tests_root/src/: 00-intro.md  01-chapter_1.md
docz-lib/tests_root/src/01-chapter_1/: 01-01-subchapter.md
src/: cfg.rs  cmd.rs  lib.rs
src/cmd/: build.rs  init.rs
test/: doc.toml
test/src/: 00-intro.md
tests/: doc.toml
tests/mdbook/: book.toml
tests/mdbook-article/: Cargo.toml
tests/mdbook-article/src/: main.rs
tests/mdbook/src/: SUMMARY.md  chapter_1.md  chapter_1_1.md  cover.md
tests/mdbook/theme/: index.hbs
tests/mdbook/theme/css/: general.css
tests/src/: 00-intro.md
