[package]
name = "docz"
version = "0.1.0"
edition = "2021"
description = "Doc generation CLI"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/docz"
repository = "https://github.com/nlargueze/docz.git"

[[bin]]
name = "doc"
path = "src/bin/doc.rs"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0.4"
env_logger = "0.10.0"
log = "0.4.19"
markdown = "1.0.0-alpha.11"
serde = { version = "1.0.182", features = ["derive"] }
toml = "0.7.6"
